<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ha Long - Guide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    
    <string name="order_a_to_z">A to Z</string>
    <string name="order_date">Date</string>
    <string name="map">Map</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="facebook_app_id">1550288068516837</string>
    
    <string name="add">Address:</string>
	<string name="des">Description:</string>
	<string name="make_call">Make Call:</string>
	<string name="show_map">Show Map:</string>
	<string name="show_map_des">Location, Distance, Duration...</string>
	<string name="show_more">View More Info:</string>
	<string name="show_more_des">Show website</string>
	<string name="show_fav">Save to Favorites:</string>
	<string name="show_fav_des">Save this place to your Favorites</string>
	
	<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
	
</resources>