<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    android:minWidth="50dp" >

    <RelativeLayout
        android:id="@+id/view_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >

            <RelativeLayout
                android:id="@+id/doujinDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tvDoujin"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <ImageView
                        android:id="@+id/ivTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:background="#FF6600"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        android:scrollbars="none" />

                    <RatingBar
                        android:id="@+id/ratingBar1"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="50dip"
                        android:minWidth="50dp"
                        android:numStars="5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/tvAddtt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FF6600"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white"
                        android:textStyle="italic" 
                        android:layout_marginLeft="2dp"/>

                    <TextView
                        android:id="@+id/tvDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/des"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FF6600"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="2dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="2dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white" />

                    <LinearLayout
                        android:id="@+id/llPhone"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/make_call"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#FF6600"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2dp"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@android:color/white" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="2dp"
                            android:src="@drawable/navigation_next_item_inverse1" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llMap"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/show_map"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#FF6600"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvMap"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2dp"
                                android:text="@string/show_map_des"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@android:color/white" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="2dp"
                            android:src="@drawable/navigation_next_item_inverse1" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llContent"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/show_more"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#FF6600"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/show_more_des"
                                android:layout_marginLeft="2dp"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@android:color/white" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="2dp"
                            android:src="@drawable/navigation_next_item_inverse1" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSave"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/show_fav"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#FF6600"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2dp"
                                android:text="@string/show_fav_des"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@android:color/white" />
                        </LinearLayout>

                        <view
                            android:id="@+id/ibdownload"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="right"
                            android:layout_marginRight="2dp"
                            class="com.example.demo.component.ActionImageButton"
                            android:background="@android:color/transparent"
                            android:src="@drawable/av_download" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pattern"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#80000000"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

</RelativeLayout>